# dehaze

./: .gitignore  CMakeLists.txt  README.md  atm_light.cpp  atm_light.h  dehaze.cpp  dehaze.h  filtering.cpp  filtering.hpp  haze_features.cpp  haze_features.hpp  haze_remover.sln  haze_remover.vcxproj  haze_remover.vcxproj.filters  main.cpp  math_features.cpp  math_features.hpp  minimizer.h  t_opt.txt  t_opt_matlab.txt  utils.cpp  utils.h
